classDiagram
    Student "1" --> "0..*" ClubMembership : holds
    StudentClub "1" --> "0..*" ClubMembership : maintains
    StudentClub "1" --> "0..*" Event : organizes
    Event "1" -- "0..*" RSVP : has
    Student "1" --> "0..*" RSVP : submits
    StudentClub "1" --> "0..*" FundingApplication : submits
    FacultyAdministrator "1" --> "0..*" FundingApplication : reviews

%% Self-referential relationship for management
%%ClubMembership "1" --> "1..*" ClubMembership : manages/promotes

    class Student {
        stuId
        name
        email
    %%        int id
    %%        String name
    %%        String email
    %%        viewEvents()
    %%        rsvpEvent(eventId)
    %%        cancelRSVP(eventId)
    }

    class ClubMembership {
        stuId
        clubId
        isAdministrator
        joinDate
    }

    class StudentClub {
        clubId
        name
        description
    %%        int id
    %%        String name
    %%        String description
    %%        createEvent(title, description, venue, capacity)
    %%        editEvent(eventId, title, description, venue, capacity)
    %%        cancelEvent(eventId)
    %%        manageAdministrators(studentId, action)
    %%        viewFundingApplications()
    }

    class Event {
        id
        title
        description
        capacity
        venue
        date
        status
    %%        int id
    %%        String title
    %%        String description
    %%        int capacity
    %%        String venue
    %%        Date date
    %%        String status
    %%        createRSVP(studentId)
    %%        editRSVP(rsvpId, newDetails)
    %%        cancelRSVP(rsvpId)
    %%        cancelEvent()
    }

    class RSVP {
        id
        date
        status
    %%        int id
    %%        Date date
    %%        String status
    }

    class FundingApplication {
        id
        description
        amountRequested
        status
    %%        int id
    %%        String description
    %%        float amountRequested
    %%        String status
    %%        createApplication(description, amountRequested)
    %%        editApplication(applicationId, newDetails)
    %%        cancelApplication(applicationId)
    %%        viewApplicationStatus()
    }

    class FacultyAdministrator {
        id
        name
        email
    %%        int id
    %%        String name
    %%        String email
    %%        approveApplication(applicationId)
    %%        rejectApplication(applicationId)
    %%        viewAllApplications()
    }